Updates to the SalesGPT project: Building the world's best AI Sales Agents.

August 23 2023
---------------
- "use_tools" as a keyword argument (kwarg) is treated as STRING i.e., agent_config["use_tools"]="True"
to be consistent with JSON payloads.

August 18, 2023
---------------
- SalesGPT API - added chat as a service and Chinese language SalesGPT prompt, huge thanks to @janewu77!

July 29, 2023
-------------
Version 0.0.5
- Minor update, remove unneccesary verbosity from `SalesGPT.from_llm` method.

July 15, 2023
-------------

Version 0.0.4
- Added tools to SalesGPT, creating a true agent.
- Added product knowledge base as an example tool

-------------